--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <span class="logo-icon">🧘</span>
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Nirvana Buddha Logo" class="logo-img">
                     <span class="logo-text">Nirvana Buddha</span>
                 </div>
                 <ul class="nav-menu" id="navMenu">
